--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,6 +14,9 @@
   <strong>Bday:</strong>
   <%= @user.bday %>
 </p>
-
+<p>
+  <strong>Address:</strong>
+  <%= @user.address %>
+</p>
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
