--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -25,7 +25,14 @@
     <%= form.label :bday %>
     <%= form.date_select :bday %>
   </div>
-
+  <div class="field">
+    <%= form.label :address %>
+    <%= form.text_field :address %>
+  </div>
+  <div class="field">
+    <%= form.label :postal_code %>
+    <%= form.text_field :postal_code %>
+  </div>
   <div class="actions">
     <%= form.submit %>
   </div>
