--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,5 +18,9 @@
   <strong>Address:</strong>
   <%= @user.address %>
 </p>
+<p>
+  <strong>Postal_code:</strong>
+  <%= @user.postal_code %>
+</p>
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
