--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :pass %>
+    <%= form.text_field :pass %>
+  </div>
+  
+  <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
@@ -36,4 +41,6 @@
   <div class="actions">
     <%= form.submit %>
   </div>
+
+  
 <% end %>
