--- a/app/views/users/_form_login.html.erb
+++ b/app/views/users/_form_login.html.erb
@@ -7,7 +7,7 @@
 
   <div class="field">
     <%= form.label :pass %>
-    <%= form.text_field :pass %>
+    <%= form.password_field :password %>
   </div>
 
    <div class="actions">
