--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', post: @post %>
 
 
-<%= link_to 'Back', user_path(@post.user_id) %>
+<%= link_to 'Back', user_path(session[:user_id]) %>
