--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :pass %>
-    <%= form.text_field :pass %>
+    <%= form.label :password %>
+    <%= form.text_field :password %>
   </div>
   
   <div class="field">
