--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Pass:</strong>
-  <%= @user.pass %>
+  <%= @user.password %>
 </p>
 
 <p>
@@ -27,21 +27,20 @@
   <strong>Postal_code:</strong>
   <%= @user.postal_code %>
 </p>
+<%= link_to 'Edit Profile', edit_user_path(@user) %>
+<p></p>
 <%= link_to 'New Post', new_post_path %>
 <table>
   <thead>
     <tr>
       <th>Msg</th>
-      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.msg %></td>
-        <td><%= post.user_id %></td>
         
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -49,5 +48,4 @@
     <% end %>
   </tbody>
 </table>
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', main_path %>
+<%= link_to 'log out', main_path %>
