--- a/app/views/users/wrong.html.erb
+++ b/app/views/users/wrong.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: @user) do |form| %>
-  <h1>wrong pass or email</h1>
+  <h1>wrong password or email</h1>
 
    <%= link_to 'Back', main_path %>
 <% end %>
